--- a/example/styles/index.css
+++ b/example/styles/index.css
@@ -1,3 +1,54 @@
-img {
+* {
+ box-sizing: border-box;
+ margin: 0;
+ padding: 0;
+}
+
+body {
+  padding: 20px;
+  font-family: Verdana,Geneva,sans-serif;
+  color: #000;
+}
+
+h1 {
+  font-size: 26px;
+  font-weight: normal;
+  padding: 5px;
+  margin: 0 0 20px 0;
+}
+
+textarea {
+  display: block;
+  width: 100%;
+}
+
+output {
+  display: inline-block;
+  width: 300px;
+  float: left;
+  background: #f8f8f8;
+  padding: 10px;
+  font-size: 12px;
+  margin-left: 20px;
+}
+
+div {
+  margin: 0 0 20px 0;
+}
+
+button {
+  font-family: Verdana,Geneva,sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.box img {
   max-width: 100px;
+}
+
+.box label {
+  display: block;
+  margin: 0 0 5px 0;
 }
